--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to left, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%); 
 }
 
 code {
